# fashion-forward-prop

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
scripts/: build_similarity_index.py  export_hf_space.py  train_classifier.py  train_denoiser.py  train_similarity.py
src/smart_image_similarity/: __init__.py
src/smart_image_similarity/classification/: config.py  data.py  engine.py  model.py  train.py
src/smart_image_similarity/common/: __init__.py  paths.py  settings.py  utils.py
src/smart_image_similarity/denoising/: __init__.py  config.py  data.py  engine.py  model.py  train.py
src/smart_image_similarity/similarity/: config.py  data.py  embeddings.py  engine.py  model.py  train.py
src/smart_image_similarity/webapp/: app.py
src/smart_image_similarity/webapp/templates/: demo.html
tests/: test_imports.py
